# ink

./: .gitignore  .inkignore  Cargo.toml
src/: main.rs
src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  init.rs  mod.rs  restore.rs  uninit.rs
src/utils/: dir.rs  enums.rs  hash.rs  ignore.rs  index.rs  log.rs  mod.rs  object.rs  zip.rs
