[package]
name = "ink"
version = "0.1.0"
edition = "2024"
authors = ["Nilotpal Gupta"]
description = "🧠 Ink: A Git-like VCS"
license = "MIT"
repository = "https://github.com/nilotpal-n7/ink"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
flate2 = { version = "1.1", features = ["zlib"] }
sha2 = "0.10"
blake3 = "1.8"
rayon = "1.10"
walkdir = "2.5"
notify = "8.1"
open = "5.3"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ignore = "0.4.23"
glob = "0.3.2"
dashmap = "6.1.0"
bincode = { version = "2.0", features = ["serde", "derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20"
